# Alipin

./: .gitignore  AGENTS.md  README.md  SKILLS.md  pyproject.toml  setup.sh
alipin/: __init__.py  __main__.py  actions.py  apps.py  cli.py  commands.py  config.py  notes.py  qa.py  router.py  ui.py  voice.py
config/: apps.json
docs/: THINKING_PROCESS.md
tests/: test_actions.py  test_notes.py  test_qa.py  test_router.py
