[project]
name = "alipin"
version = "0.1.0"
description = "Learning-first personal voice AI assistant prototype."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
alipin = "alipin.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
